option java_outer_classname = "LCOvertimeParkingInAreaDel";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

message OvertimeParkingInAreaDel{
	repeated	int64	areaIdentifys				=1;
	optional	bool	saveSign 				    =2;
}